tests/paczka2/big_fuzzy/37441367.err
Error in line 2: zxHuUEI S24 62,6
Error in line 21: Fye0dwG A377 49,9
Error in line 22: Fye0dwG S24 1,0
Error in line 28: eNinYh A300 61,3
Error in line 35: XC5vsy6jHSK A377 78,4
Error in line 45: zxHuUEI A170 69,2
Error in line 41: XC5vsy6jHSK A377 6,5
Error in line 54: zxHuUEI S24 0,9
Error in line 57: XC5vsy6jHSK A170 33,4
Error in line 40: uuri62w4 A377 41,9
Error in line 59: zxHuUEI A377 79,7
Error in line 62: uuri62w4 A300 50,4
Error in line 52: A300 A300 22,7
Error in line 44: XeRbdsqWdE A170 44,8
Error in line 76: zxHuUEI S24 75,8
Error in line 78: Fye0dwG A377 1,4
Error in line 74: A300 A377 232,1
Error in line 81: uuri62w4 A170 39,5
Error in line 79: Fye0dwG S24 28,1
Error in line 84: A300 S24 72,0
Error in line 106: A300 A377 33,3
Error in line 107: A300 A300 54,0
Error in line 122: eNinYh S24 32,5
Error in line 124: eNinYh A170 9,4
Error in line 129: Fye0dwG S24 58,4
Error in line 140: XeRbdsqWdE A170 15,73
Error in line 142: XeRbdsqWdE A377 57,1
Error in line 177: XC5vsy6jHSK A377 12,3
Error in line 167: A300 A377 1,2
Error in line 189: XC5vsy6jHSK A377 39,9
Error in line 195: XeRbdsqWdE A170 38,2
Error in line 202: uuri62w4 A300 72,6
Error in line 204: Fye0dwG A300 25,6
Error in line 224: uuri62w4 A300 22,2
Error in line 225: A300 A170 154,8
Error in line 230: eNinYh A170 39,6
Error in line 236: A300 S24 1,4
Error in line 228: XeRbdsqWdE A170 7,9
Error in line 238: Fye0dwG A377 80,4
Error in line 242: Fye0dwG S24 14,7
Error in line 241: XeRbdsqWdE S24 80,1
